# seraphim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  analyse-code.sh  build.sh  dependency_install.sh  game.json  install.sh  projectBuild.sh  reformat-code.sh  run.sh
backend/: collision.cpp  collision.h  deform.h  metaphysics.cpp  metaphysics.h  optimise.cpp  optimise.h  physics.cpp  physics.h  platonic.cpp  platonic.h  primitive.cpp  primitive.h  sdf.cpp  sdf.h
common/: array.cpp  bound.cpp  bound.h  camera.cpp  camera.h  constant.h  file.cpp  file.h  light.cpp  light.h  main.cpp  material.cpp  material.h  maths.cpp  maths.h  matter.cpp  matter.h  random.cpp  random.h  seraphim.cpp  seraphim.h  sphere.cpp  sphere.h  substance.cpp  substance.h  substance_data.h  transform.cpp  transform.h
frontend/: buffer.cpp  buffer.h  command.cpp  command.h  comp.glsl  device.cpp  device.h  frag.glsl  keyboard.cpp  mouse.cpp  mouse.h  renderer.cpp  renderer.h  request.cpp  request.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  ui.cpp  ui.h  window.cpp  window.h
idiot zone/: brdf.frag  image.cpp  image.h  misc.comp  texture.h  things.glsl
include/: aabb.h  actor.h  bounds.h  buffer.h  camera.h  chalet.h  dual_quat.h  effector.h  engine.h  event_emitter.h  image.h  input.h  marching_cubes.h  mat.h  material.h  maths.h  mesh.h  prop.h  quat.h  renderable.h  renderer.h  scheduler.h  sdf.h  texture.h  time.h  transform.h  vec.h  vertex.h  vk_utils.h
include/core/: README.md  aabb.h  allocator.h  array.h  blaspheme.h  body.h  buffer.h  command.h  command_buffer.h  constant.h  debug.h  device.h  hyper.h  material.h  random.h  scheduler.h  sdf.h  seraphim.h  set.h  uuid.h  vk_utils.h
include/input/: keyboard.h  mouse.h
include/lib/: cJSON.h
include/logic/: README.md  emitter.h  event_emitter.h  interval_revelator.h  revelator.h  scheduler.h
include/maths/: aabb.h  bigmatrix.h  bound.h  constants.h  interval.h  mat.h  maths.h  matrix.h  nelder_mead.h  optimise.h  quat.h  sdf.h  solver.h  vec.h  vec3.h  vector.h
include/metaphysics/: form.h  material.h  matter.h  substance.h
include/physics/: bound.h  broad_phase.h  collider.h  collision.h  constraint.h  deform.h  physics.h  ray.h  rigidbody.h  sphere.h  transform.h
include/render/: brick.h  call_and_response.h  camera.h  image.h  light.h  material.h  matter.h  mesh.h  n3_tree.h  octree.h  painter.h  renderable.h  renderer.h  request.h  request_manager.h  shader.h  substance.h  swapchain.h  swapchain_image.h  texture.h  texture_manager.h  vertex.h
include/scene/: dop.h  transform.h  warp_field.h
include/sdf/: compose.h  composition.h  lambda_sdf.h  mutate.h  primitive.h  sdf.h
include/substance/: substance.h
include/ui/: file.h  input.h  keyboard.h  mouse.h  resources.h  window.h
src/: aabb.cpp  actor.cpp  bounds.cpp  buffer.cpp  camera.cpp  chalet.cpp  dual_quat.cpp  effector.cpp  engine.cpp  image.cpp  input.cpp  lib.cpp  main.cpp  marching_cubes.cpp  mat.cpp  maths.cpp  mesh.cpp  prop.cpp  quat.cpp  renderer.cpp  scheduler.cpp  sdf.cpp  texture.cpp  transform.cpp  vk_utils.cpp  vma.cpp
src/core/: aabb.cpp  array.cpp  (+12 more)
test/: CMakeLists.txt  test_array.h  test_bound3.h  test_header.h  test_main.c  test_main.cpp  test_matrix.h  test_matter.h  test_quat.h  test_sdf.h  test_transform.h
(+103 files in other folders)
